Make it compile and run on GPU

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,11 @@
         "thread": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "any": "cpp",
+        "condition_variable": "cpp",
+        "forward_list": "cpp",
+        "mutex": "cpp",
+        "cinttypes": "cpp"
     }
 }
