fix hip operators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 3.20)
-if(USEHIP)
+if(USE_HIP)
     set(CMAKE_CXX_COMPILER /opt/rocm/bin/hipcc) # Adjust the path if needed
+    project(onnx_cpp_lib LANGUAGES CXX HIP)
+else()
+    project(onnx_cpp_lib LANGUAGES CXX)
 endif()
 
-
-project(onnx_cpp_lib LANGUAGES CXX HIP)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 
 # HIP configuration
-if(USEHIP)
-    message(STATUS "USEHIP flag is set, using HIP for compilation")
+if(USE_HIP)
+    message(STATUS "USE_HIP flag is set, using HIP for compilation")
     find_package(HIP REQUIRED)
-
-    # Define USE_HIP globally
-    add_compile_definitions(USE_HIP)
+else()
+    message(STATUS "USE_HIP flag is not set, using default compiler")
 endif()
 
 # ProtoBuf configuration
@@ -31,28 +31,20 @@ PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${PROTO_FILES}
 
 file(GLOB_RECURSE LIB_SRC_FILES src/*.cpp src/*.cc)
 
-if(USEHIP)
-    add_library(onnx_cpp_lib STATIC ${LIB_SRC_FILES} ${PROTO_SRCS})
-    target_link_libraries(onnx_cpp_lib ${Protobuf_LIBRARIES} hip::device)
+add_library(onnx_cpp_lib STATIC ${LIB_SRC_FILES} ${PROTO_SRCS})
 
-    target_include_directories(onnx_cpp_lib PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${PROTO_OUTPUT_DIR}
-        ${CMAKE_CURRENT_BINARY_DIR}
-        ${HIP_INCLUDE_DIRS}
-    )
+target_link_libraries(onnx_cpp_lib PRIVATE ${Protobuf_LIBRARIES})
 
+target_include_directories(onnx_cpp_lib PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${PROTO_OUTPUT_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
+)
+
+if(USE_HIP)
+    target_link_libraries(onnx_cpp_lib PRIVATE hip::device)
+    target_include_directories(onnx_cpp_lib PRIVATE ${HIP_INCLUDE_DIRS})
     target_compile_definitions(onnx_cpp_lib PRIVATE USE_HIP)
-else()
-    add_library(onnx_cpp_lib STATIC ${LIB_SRC_FILES} ${PROTO_SRCS})
-
-    target_link_libraries(onnx_cpp_lib ${Protobuf_LIBRARIES})
-
-    target_include_directories(onnx_cpp_lib PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${PROTO_OUTPUT_DIR}
-        ${CMAKE_CURRENT_BINARY_DIR}
-    )
 endif()
 
 # GTest configuration
@@ -71,8 +63,12 @@ file(GLOB TEST_SOURCES "${PROJECT_SOURCE_DIR}/tests/*.cpp")
 foreach(TEST_SOURCE ${TEST_SOURCES})
     get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
     add_executable(${TEST_NAME} ${TEST_SOURCE})
-    target_link_libraries(${TEST_NAME} gtest gtest_main onnx_cpp_lib ${Protobuf_LIBRARIES})
-    target_compile_definitions(${TEST_NAME} PRIVATE USE_HIP)
+    target_link_libraries(${TEST_NAME} PRIVATE gtest gtest_main onnx_cpp_lib ${Protobuf_LIBRARIES})
+
+    if(USE_HIP)
+        target_link_libraries(${TEST_NAME} PRIVATE hip::device)
+        target_compile_definitions(${TEST_NAME} PRIVATE USE_HIP)
+    endif()
 
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 endforeach()
